# db8

./: .gitignore  CMakeLists.txt  README.md
cmake/Modules/: FindSnappy.cmake
files/conf/: epgdb.conf.in  maindb.conf.in  mediadb.conf.in  tempdb.conf.in
files/pkgconfig/: db8.pc.in
files/scripts/: errorNoSpace.bash  errorOpenEpgDb.bash  errorOpenMainDb.bash  registerFault.bash
inc/core/: MojApp.h  MojAtomicInt.h  MojAutoPtr.h  MojBuffer.h  MojComp.h  MojCoreDefs.h  MojDataSerialization.h  MojDecimal.h  MojEpollReactor.h  MojErr.h  MojFile.h  MojGmainReactor.h  MojHashMap.h  MojHasher.h  MojJson.h  MojList.h  MojListEntry.h  MojLog.h  MojLogDb8.h  MojLogEngine.h  MojMap.h  MojMessage.h  MojMessageDispatcher.h  MojNoCopy.h  MojNumber.h  MojObject.h  MojObjectBuilder.h  MojObjectFilter.h  MojObjectSerialization.h  MojOs.h  MojPmLogAppender.h  MojReactor.h  MojReactorApp.h  MojRefCount.h  MojSchema.h  MojService.h  MojServiceApp.h  MojServiceMessage.h  MojServiceRequest.h  MojSet.h  (+13 more)
inc/db/: MojDb.h  MojDbAggregateFilter.h  MojDbClient.h  MojDbCursor.h  MojDbDefs.h  MojDbEasySignal.h  MojDbExtractor.h  MojDbIdGenerator.h  MojDbIndex.h  MojDbIsamQuery.h  MojDbKey.h  MojDbKind.h  MojDbKindEngine.h  MojDbKindIdList.h  MojDbKindState.h  MojDbMediaHandler.h  MojDbMediaLinkManager.h  MojDbObjectHeader.h  MojDbObjectItem.h  MojDbPermissionEngine.h  MojDbProfileApplication.h  MojDbProfileEngine.h  MojDbProfileStat.h  MojDbPutHandler.h  MojDbQuery.h  MojDbQueryFilter.h  MojDbQueryParser.h  MojDbQueryPlan.h  MojDbQuotaEngine.h  MojDbReq.h  MojDbRevisionSet.h  MojDbSearchCache.h  MojDbSearchCacheCursor.h  MojDbSearchCursor.h  MojDbServiceClient.h  MojDbServiceDefs.h  MojDbServiceHandler.h  MojDbServiceHandlerBase.h  MojDbServiceHandlerInternal.h  MojDbShardEngine.h  (+10 more)
inc/db-luna/: MojDbInnoEngine.h  MojDbInnoFactory.h  MojDbInnoQuery.h  MojDbLunaServiceApp.h  MojDbLunaServiceDb.h
inc/luna/: MojLunaDefs.h  MojLunaErr.h  MojLunaMessage.h  MojLunaRequest.h  MojLunaService.h
src/core/: CMakeLists.txt  MojApp.cpp  MojBuffer.cpp  MojDataSerialization.cpp  MojDecimal.cpp  MojEpollReactor.cpp  MojErr.cpp  MojFile.cpp  MojGmainReactor.cpp  MojHashBase.cpp  MojJson.cpp  MojList.cpp  MojLog.cpp  MojLogDb8.cpp  MojLogEngine.cpp  MojMessageDispatcher.cpp  MojObject.cpp  MojObjectBuilder.cpp  MojObjectFilter.cpp  MojObjectSerialization.cpp  MojOs.cpp  MojPmLogAppender.cpp  MojRbTreeBase.cpp  MojRefCount.cpp  MojSchema.cpp  MojService.cpp  MojServiceApp.cpp  MojServiceMessage.cpp  MojServiceRequest.cpp  MojSignal.cpp  MojSock.cpp  MojSocketEncoding.cpp  MojSocketMessage.cpp  MojSocketService.cpp  MojString.cpp  MojTestRunner.cpp  MojThread.cpp  MojTokenSet.cpp  MojUtil.cpp
src/db/: CMakeLists.txt  MojDb.cpp  MojDbAdmin.cpp  MojDbAggregateFilter.cpp  MojDbClient.cpp  MojDbCursor.cpp  MojDbExtractor.cpp  MojDbIdGenerator.cpp  MojDbIndex.cpp  MojDbIsamQuery.cpp  MojDbKey.cpp  MojDbKind.cpp  MojDbKindEngine.cpp  MojDbKindIdList.cpp  MojDbKindState.cpp  MojDbMediaHandler.cpp  MojDbMediaLinkManager.cpp  MojDbObjectHeader.cpp  MojDbObjectItem.cpp  MojDbPermissionEngine.cpp  MojDbProfileApplication.cpp  MojDbProfileEngine.cpp  MojDbProfileStat.cpp  MojDbPutHandler.cpp  MojDbQuery.cpp  MojDbQueryFilter.cpp  MojDbQueryParser.cpp  MojDbQueryPlan.cpp  MojDbQuotaEngine.cpp  MojDbReq.cpp  MojDbRevisionSet.cpp  MojDbSearchCache.cpp  MojDbSearchCacheCursor.cpp  MojDbSearchCursor.cpp  MojDbServiceClient.cpp  MojDbServiceDefs.cpp  MojDbServiceHandler.cpp  MojDbServiceHandlerBase.cpp  MojDbServiceHandlerInternal.cpp  MojDbServiceSchemas.cpp  (+11 more)
src/db-luna/: BackendBuildRules.cmake  CMakeLists.txt  MojDbLunaServiceApp.cpp  MojDbLunaServiceDb.cpp  activity-com.palm.db.space.json  activity-com.palm.tempdb.purge.json  activity-com.palm.tempdb.space.json  activity-com.webos.epgdb.purge.json  activity-com.webos.epgdb.space.json  activity-com.webos.mediadb.space.json
src/luna/: CMakeLists.txt  MojLunaErr.cpp  MojLunaMessage.cpp  MojLunaRequest.cpp  MojLunaService.cpp
test/core/: CMakeLists.txt  MojAtomicIntTest.cpp  MojAtomicIntTest.h  MojAutoPtrTest.cpp  MojAutoPtrTest.h  MojBufferTest.cpp  MojBufferTest.h  MojCoreTestRunner.cpp  MojCoreTestRunner.h  MojDataSerializationTest.cpp  MojDataSerializationTest.h  MojDecimalTest.cpp  MojDecimalTest.h  MojErrTest.cpp  MojErrTest.h  MojHashMapTest.cpp  MojHashMapTest.h  MojJsonTest.cpp  MojJsonTest.h  MojListTest.cpp  MojListTest.h  MojLogTest.cpp  MojLogTest.h  MojMapTest.cpp  MojMapTest.h  MojMessageDispatcherTest.cpp  MojMessageDispatcherTest.h  MojObjectFilterTest.cpp  MojObjectFilterTest.h  MojObjectSerializationTest.cpp  MojObjectSerializationTest.h  MojObjectTest.cpp  MojObjectTest.h  MojReactorTest.cpp  MojReactorTest.h  MojRefCountTest.cpp  MojRefCountTest.h  MojSchemaTest.cpp  MojSchemaTest.h  MojSetTest.cpp  (+13 more)
test/db/: CMakeLists.txt  MojDbAggregateTest.cpp  MojDbAggregateTest.h  MojDbBulkTest.cpp  MojDbBulkTest.h  MojDbConcurrencyTest.cpp  MojDbConcurrencyTest.h  MojDbCrudTest.cpp  MojDbCrudTest.h  MojDbCursorTxnTest.cpp  MojDbCursorTxnTest.h  MojDbDatabaseIdTest.cpp  MojDbDatabaseIdTest.h  MojDbDistinctTest.cpp  MojDbDistinctTest.h  MojDbDumpLoadTest.cpp  MojDbDumpLoadTest.h  MojDbIndexTest.cpp  MojDbIndexTest.h  MojDbKindTest.cpp  MojDbKindTest.h  MojDbLocaleTest.cpp  MojDbLocaleTest.h  MojDbNewIdTest.cpp  MojDbNewIdTest.h  MojDbPerfCacheReadTest.cpp  MojDbPerfCacheReadTest.h  MojDbPerfCreateTest.cpp  MojDbPerfCreateTest.h  MojDbPerfDeleteTest.cpp  (+51 more)
test/db-core/: BatchTest.cpp  CMakeLists.txt  CrudTest.cpp  DumpLoadTest.cpp  IdGeneratorTest.cpp  JsonTest.cpp  KindTest.cpp  MojDbCoreTest.h  MojEasySignalTest.cpp  QuotaTest.cpp  ReqTest.cpp  Runner.h  SearchTest.cpp  ShardsTest.cpp  SimpleWatchTest.cpp  TextCollatorTest.cpp  ThreadedTest.cpp
test/db-media/: CMakeLists.txt  MediaTest.cpp  Runner.cpp
test/db-scripts/: CMakeLists.txt  readme  test_app_private_data.bash
test/performance/: CMakeLists.txt  analysis.m  compare.m  complexity.m  dbhelpers.cpp  dbhelpers.h  generate.cpp  report.h  sample.h  suite.h  suites.h  testsuite.cpp
tool/: find-optimizable-index
(+234 files in other folders)
